comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Atrtigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima pariatur hic velit placeat officiis. Aspernatur perspiciatis reprehenderit animi praesentium iste! Illum, eveniet. Architecto maxime dolore labore harum, perferendis sequi laboriosam.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum minima adipisci nulla, molestiae ullam quis repellat, quaerat autem dolore saepe nobis, similique sit reprehenderit aperiam possimus unde aspernatur minus deleniti!</p>
         </article>
     </main>
 </body>
